Fixed alignment of dialog footer item

--- a/src/app/learn-mul-facts/learn-mul-facts.component.scss
+++ b/src/app/learn-mul-facts/learn-mul-facts.component.scss
@@ -1,11 +1,13 @@
-mat-slide-toggle {
-    margin-left: 12px;
-    margin-right: 12px;
-}
 mat-list {
     height: 490px;
     text-align: center;
 }
 mat-slider {
     margin-left: 12px;
+}
+.dialog-action-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 97%;
 }
